--- a/photos.css
+++ b/photos.css
@@ -1,25 +1,44 @@
+#doc{
+	padding-left: 7%;
+	padding-right: 7%;
+}
 
+* {
+	padding: 0;
+	margin: 0;
+
+}
+
+hr{
+	margin-top: 4%;
+	margin-bottom: 5%;
+}
 
 /*body*/
 body {
 background: url(images/background.jpg)no-repeat center;
 background-color: black;
 font-family: "Open Sans";
-background-size: cover;
-background-position: center;
+background-position:center;
+background-attachment: fixed;
+background-size: 100% auto;
 }
 
 .opacity {
 	background-color: rgba(0,0,0,0.5 );
 }
 
-#doc{
-	padding-left: 7%;
-	padding-right: 7%;
+
+/*container*/
+.container{
+	width: 100%;
+	line-height: 1000%;
 }
 
 
 /*nav*/
+.
+
 header nav {
  text-align: center;
  height: 20%;
@@ -29,17 +48,19 @@ header nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
- display: inline-block;
+ display: flex;
  line-height: 141px;
+ justify-content: center;
 }
 
 header nav ul li {
- display: inline-block;
+ display: flex;
  padding: 0 20px;
+ justify-content: center;
 }
 
 a:link, a:visited {
- color: #696969;
+ color: #2D241E;
  text-decoration: none;
 }
 
@@ -50,7 +71,8 @@ a:hover {
 }
 
 
-/*videos*/
+
+/*titres*/
 .pro h1{
 text-align: center;
 font-size: 3em;
@@ -59,87 +81,68 @@ color:white;
 
 .pro p{
 	text-align: center;
-	color: #696969;
-	font-size: .8em;
-}
-
-.titres {
-display: flex;
-justify-content: space-between;
-}
-
-
-.video {
- display: flex;
- justify-content: space-between;
- border-top: 2px solid black;
- border-bottom: 2px solid black;
-
-}
-
-.rose img{
-	padding-top: 6%;
-}
-.guit img{
-	padding-left: 3%;
-	padding-right: 3%;
-	padding-top: 6%;
-}
-.guit p{
-	padding-left: 6%;
-}
-
-.guit{
-	border-left: 2px solid black;
-	border-right: 2px solid black;
-}
-.june img{
-	padding-top: 6%;
+	color: white;
+	font-size: 1em;
+	margin-top: 4%;
 }
 
 
 
-strong {
-color:white;
-}
+/*mosaique*/
 
 
-
-/*gigs*/
-
-.dates{
+.album{
 	display: flex;
-	flex-direction: row;
-	width: 70%;
-	justify-content: space-between;
+	flex-direction: column;
+
 }
 
-.mois p{
-width: 5%;
-border-bottom: 2px solid black;
+.ligne1{
+	display: flex;
+
+
+}
+.sol{
+	display: flex;
+
 }
 
-.jours{
-	width: 10%;
-	float: left;
-	padding-right: 5%;
-}
-.jours p{
-	border-bottom: 2px solid black;
+.sup{
+	display: flex;
+	flex-direction: column;
+
+
 }
 
-.ville{
-	float: left;
-	width: 40%;
+
+
+.tag{
+	display: flex;
+	width: 85%;
+	height: 30%;
+
+
 }
 
-.ville p{
-	border-bottom: 2px solid black;
+.champ{
+	display: flex;
+	width: 100%;
+
+
 }
 
-.salle p{
-	border-bottom: 2px solid black;
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -154,10 +157,16 @@ border-bottom: 2px solid black;
 	display: flex;
 	justify-content: space-around;
 	text-align: left;
+	margin-top: 5%;
+}
+
+h3{
+	margin-bottom: 2%;
 }
 
 .obs{
 	width: 30%;
+	margin-bottom: 4%;
 }
  .obs p{
 	 font-size: .8em;
@@ -165,10 +174,15 @@ border-bottom: 2px solid black;
 
 .viv{
 	width: 30%;
+	margin-bottom: 4%;
 }
 
 .posts{
 	width: 30%;
+}
+
+.post h5{
+	margin-bottom: 3%;
 }
 
 
@@ -185,6 +199,7 @@ border-bottom: 2px solid black;
 	list-style: none;
 	line-height: 70px;
 	text-align: center;
+
 }
 
 #share i{
