--- a/videos.css
+++ b/videos.css
@@ -1,25 +1,44 @@
+#doc{
+	padding-left: 7%;
+	padding-right: 7%;
+}
 
+* {
+	padding: 0;
+	margin: 0;
+
+}
+
+hr{
+	margin-top: 4%;
+	margin-bottom: 5%;
+}
 
 /*body*/
 body {
 background: url(images/background.jpg)no-repeat center;
 background-color: black;
 font-family: "Open Sans";
-background-size: cover;
-background-position: center;
+background-position:center;
+background-attachment: fixed;
+background-size: 100% auto;
 }
 
 .opacity {
 	background-color: rgba(0,0,0,0.5 );
 }
 
-#doc{
-	padding-left: 7%;
-	padding-right: 7%;
+
+/*container*/
+.container{
+	width: 100%;
+	line-height: 1000%;
 }
 
 
 /*nav*/
+.
+
 header nav {
  text-align: center;
  height: 20%;
@@ -29,17 +48,19 @@ header nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
- display: inline-block;
+ display: flex;
  line-height: 141px;
+ justify-content: center;
 }
 
 header nav ul li {
- display: inline-block;
+ display: flex;
  padding: 0 20px;
+ justify-content: center;
 }
 
 a:link, a:visited {
- color: #696969;
+ color: #2D241E;
  text-decoration: none;
 }
 
@@ -50,7 +71,8 @@ a:hover {
 }
 
 
-/*videos*/
+
+/*titres*/
 .pro h1{
 text-align: center;
 font-size: 3em;
@@ -59,15 +81,10 @@ color:white;
 
 .pro p{
 	text-align: center;
-	color: #696969;
-	font-size: .8em;
+	color: white;
+	font-size: 1em;
+	margin-top: 4%;
 }
-
-.titres {
-display: flex;
-justify-content: space-between;
-}
-
 
 .video {
  display: flex;
@@ -96,58 +113,6 @@ justify-content: space-between;
 .june img{
 	padding-top: 6%;
 }
-
-
-
-strong {
-color:white;
-}
-
-
-
-/*gigs*/
-
-.dates{
-	display: flex;
-	flex-direction: row;
-	width: 70%;
-	justify-content: space-between;
-}
-
-.mois p{
-width: 5%;
-border-bottom: 2px solid black;
-}
-
-.jours{
-	width: 10%;
-	float: left;
-	padding-right: 5%;
-}
-.jours p{
-	border-bottom: 2px solid black;
-}
-
-.ville{
-	float: left;
-	width: 40%;
-}
-
-.ville p{
-	border-bottom: 2px solid black;
-}
-
-.salle p{
-	border-bottom: 2px solid black;
-}
-
-
-
-
-
-
-
-
 
 /*mid*/
 .mid{
